<resources>
    <string name="app_name">BattleItOut</string>
    <string name="app_name_generic">BattleItOut</string>

     <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut nulla non ligula dictum dignissim.
        Sed ut bibendum est. Etiam vulputate, urna aliquet semper euismod, orci felis luctus metus, vel malesuada massa dolor quis neque.
        In nec maximus ligula. Fusce sed velit et elit pulvinar condimentum tristique et mi. Phasellus id dictum metus. Ut molestie malesuada augue,
        id malesuada tellus. Proin eu varius mauris.
        Aliquam erat volutpat. Nam auctor commodo libero sed blandit. Ut convallis pharetra ante quis rhoncus.</string>

    <!-- Screen Labels -->
    <string name="label_login_screen">@string/app_name_generic</string>
    <string name="label_reset_pass">@string/app_name_generic</string>

    <!-- Login Screen -->
    <string name="login_label">Login</string>
    <string name="login_label_dev">Login To Dev</string>
    <string name="login_username">USERNAME</string>
    <string name="login_pass">PASSWORD</string>
    <string name="login_button">Login</string>
    <string name="login_failed">Failed to login. Please try again later!</string>
    <string name="login_user_not_found">Failed to retrieve user info. Please try again later!</string>
    <string name="login_forgot_pass"><U>Forgot Password ?</U></string>
    <string name="login_username_empty_message">Please enter a valid username!</string>
    <string name="login_password_empty_message">Please enter a valid password!</string>

</resources>
